k8s/cluster/services/middleware-server/middleware-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: middleware-server
  namespace: services
spec:
  type: NodePort
  ports:
    - port: 80
      name: http
      targetPort: http
      protocol: TCP
      nodePort: 31100
  selector:
    app: middleware-server
