k8s/cluster/services/middleware-server/middleware-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: middleware-server
  namespace: services
spec:
  rules:
    - host: middleware-server.services
      http:
        paths:
          - backend:
              service:
                name: middleware-server
                port:
                  name: http
            pathType: Prefix
            path: /
